# webserver-benchmarks

./: README.md
benchmark-runner/: Cargo.toml  Dockerfile  docker-compose.yml
benchmark-runner/scripts/: pre-commit.sh  shell.sh
benchmark-runner/src/: docker.rs  http.rs  main.rs  process_manager.rs
benchmark-runner/src/benchmarks/: download_binary.rs  matrix_multiplication.rs  mod.rs  plaintext.rs
scripts/: pre-commit.sh  run.sh
webservers/fastapi/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
webservers/fastapi/scripts/: pre-commit.sh
webservers/fastapi/src/: main.py
webservers/nodejs-express/: Dockerfile  package-lock.json  package.json  tsconfig.json
webservers/nodejs-express/scripts/: pre-commit.sh
webservers/nodejs-express/src/: index.ts
webservers/python-fastapi/: pyproject.toml
webservers/python-fastapi/scripts/: pre-commit.sh
webservers/python-fastapi/src/: main.py
webservers/rust-axum/: Cargo.toml  Dockerfile
webservers/rust-axum/scripts/: pre-commit.sh
webservers/rust-axum/src/: main.rs
