[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bytes = "1.10.1"
ctrlc = "3.5.1"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
